Fix color and spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -147,7 +147,7 @@
     --heading-font-family: var(--sans-serif);
 
     --teal:    #36b4d4;
-    --lime:    #7ed321;
+    --green:   #7ed321;
     --fuchsia: #da0496;
     --olive:   #1d9b8b;
 
